# Whorl

./: README.md  metadata.json  pyproject.toml  whorl.py
config/: whorl.toml.example
scripts/: install.sh
src/: App.tsx  index.css
src/lib/: field.ts
whorl/: __init__.py  cli.py
whorl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
whorl/agents/yvette/: __init__.py
whorl/bridge/: __init__.py
whorl/core/: config.py  db.py  models.py  vault.py
whorl/forge/: __init__.py
whorl/hotseat/: __init__.py
whorl/loom/: __init__.py
whorl/nostr/: __init__.py
whorl/scouts/: __init__.py
whorl/tailor/: __init__.py
